<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".ui.login.LoginActivity">

  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="328dp"
    tools:ignore="MissingConstraints">

    <View
      android:layout_width="match_parent"
      android:layout_height="328dp"
      android:background="@color/colorPrimary"/>


    <ImageView
      android:layout_width="144dp"
      android:layout_height="144dp"
      android:layout_marginTop="-91dp"
      android:layout_marginStart="-57dp"
      android:layout_marginLeft="-57dp"
      android:layout_alignParentTop="true"
      android:background="@drawable/ecllipse1"/>

    <ImageView
      android:layout_width="69dp"
      android:layout_height="69dp"
      android:layout_marginTop="197dp"
      android:layout_marginStart="4dp"
      android:layout_marginLeft="4dp"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true"
      android:layout_alignParentTop="true"
      android:background="@drawable/ecllipse2"/>


    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="89dp"
      android:layout_marginEnd="-100dp"
      android:layout_marginRight="-100dp"
      android:layout_alignParentEnd="true"
      android:layout_alignParentRight="true"
      android:background="@drawable/ecclipse3"/>


    <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="88dp"
      android:layout_centerHorizontal="true"
      android:scaleType="fitXY"
      app:srcCompat="@drawable/ic_logo_text"/>

  </RelativeLayout>

  <androidx.cardview.widget.CardView
    android:layout_width="328dp"
    android:layout_height="294dp"
    android:layout_marginTop="224dp"
    android:background="@color/white"
    app:cardCornerRadius="5dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">


    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent">


      <TextView
        style="@style/MullerBold20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/white"
        android:text="@string/label_enter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etLogin"
        style="@style/MullerMedium14"
        android:layout_width="264dp"
        android:layout_height="48dp"
        android:layout_marginTop="76dp"
        android:layout_marginStart="@dimen/spacing_xxhuge"
        android:layout_marginEnd="@dimen/spacing_xxhuge"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:background="@drawable/border"
        android:drawableLeft="@drawable/ic_person_enable"
        android:drawablePadding="@dimen/spacing_medium"
        android:drawableStart="@drawable/ic_person_enable"
        android:hint="@string/label_login"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


      <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPass"
        style="@style/MullerMedium14"
        android:layout_width="264dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="@dimen/spacing_xxhuge"
        android:layout_marginEnd="@dimen/spacing_xxhuge"
        android:paddingStart="16dp"
        android:paddingLeft="16dp"
        android:background="@drawable/border"
        android:drawableLeft="@drawable/ic_padlock_enable"
        android:drawablePadding="@dimen/spacing_medium"
        android:drawableStart="@drawable/ic_padlock_enable"
        android:hint="@string/label_pass"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:text=""
        android:textColorHint="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etLogin"/>


      <Button
        android:id="@+id/btnLogin"
        style="@style/MullerBold14"
        android:layout_width="104dp"
        android:layout_height="36dp"
        android:layout_marginTop="24dp"
        android:paddingTop="@dimen/spacing_small"

        android:paddingBottom="@dimen/spacing_small"
        android:paddingStart="@dimen/spacing_medium"
        android:paddingEnd="@dimen/spacing_medium"
        android:background="@drawable/bg_btn_accent"
        android:text="@string/label_enter"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPass"
        />


    </androidx.constraintlayout.widget.ConstraintLayout>

  </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>

